--- a/Back-end/views/category/byCat.hbs
+++ b/Back-end/views/category/byCat.hbs
@@ -7,7 +7,7 @@
 
 {{#section 'nav'}}
 <!-- NAV -->
-<li class="active"><a href="#"><i class="fas fa-home"></i> Trang chủ</a></li>
+<li class="active"><a href="home/index"><i class="fas fa-home"></i> Trang chủ</a></li>
 	
 	<li class="dropdown"><a href="#"><i class="fas fa-bars"></i> Xem theo loại sản phẩm</a>
 		<div class="dropdown-content">
