--- a/Back-end/views/producer/byProducer.hbs
+++ b/Back-end/views/producer/byProducer.hbs
@@ -7,8 +7,7 @@
 {{#section 'nav'}}
 <!-- NAV -->
 <li class="active">
-	<a href="#">
-		<i class="fas fa-home"></i> Trang chủ</a>
+	<a href="home/index"><i class="fas fa-home"></i> Trang chủ</a>
 </li>
 
 <li class="dropdown">
@@ -86,12 +85,12 @@
 	{{#each products}}
 	<!-- product -->
 	<div class="col-md-4 col-xs-6">
-		<a href="#" target="blank">
+		<a href="product/detail/{{ProID}}" target="blank">
 			<div class="product">
 				<div class="product-img">
 					<img src="/imgs/{{ProID}}/main.jpg" alt="">
 					<div class="product-label">
-						<span class="new">NEW</span>
+						<span class="new"></span>
 					</div>
 				</div>
 				<div class="product-body">
@@ -103,13 +102,6 @@
 					<h4 class="product-price">{{number_format Price}} ₫
 						<del class="product-old-price"></del>
 					</h4>
-					<div class="product-rating">
-						<i class="fa fa-star"></i>
-						<i class="fa fa-star"></i>
-						<i class="fa fa-star"></i>
-						<i class="fa fa-star"></i>
-						<i class="fa fa-star"></i>
-					</div>
 
 				</div>
 				<div class="add-to-cart">
