--- a/Back-end/views/search/resultProName.hbs
+++ b/Back-end/views/search/resultProName.hbs
@@ -30,37 +30,38 @@
 </li>
 <!-- /NAV -->
 {{/section}} 
-{{#section 'bodyright'}}
-<!-- store top filter -->
-<div class="store-filter clearfix">
-	<div class="store-sort">
-		<label>
-			Sort By:
-			<select class="input-select">
-				<option value="0">Popular</option>
-				<option value="1">Position</option>
-			</select>
-		</label>
-
-		<label>
-			Show:
-			<select class="input-select">
-				<option value="0">6</option>
-			</select>
-		</label>
+{{#section 'bodyleft'}}
+<!-- aside Widget -->
+<div class="aside">
+	<h3 class="aside-title">Tìm kiếm nhanh</h3>
+	<div class="checkbox-filter">
+		{{#each layoutVM2.producers}}
+		<div class="input-checkbox">
+			<input type="checkbox" checked="" id="brand-1">
+			<label for="brand-1">
+				<span></span>
+				<a href="/producer/{{ProduID}}">{{ProduName}}</a>
+				<small>(10)</small>
+			</label>
+		</div>
+		{{/each}}
+		{{#each layoutVM.categories}}
+				<div class="input-checkbox">
+					<input type="checkbox"   id="checkk" checked="">
+					<label for="checkk">
+						<span></span>
+						<a href="/category/{{CatID}}" >{{CatName}}</a>
+						<small>(10)</small>
+					</label>
+					
+					
+				</div>
+			{{/each}}
 	</div>
-	<ul class="store-grid">
-		<li class="active">
-			<i class="fa fa-th"></i>
-		</li>
-		<li>
-			<a href="#">
-				<i class="fa fa-th-list"></i>
-			</a>
-		</li>
-	</ul>
 </div>
-<!-- /store top filter -->
+<!-- /aside Widget -->
+{{/section}}
+{{#section 'bodyright'}}
 
 <!-- store products -->
 <div class="row">
