--- a/Back-end/views/category/byCat.hbs
+++ b/Back-end/views/category/byCat.hbs
@@ -30,31 +30,20 @@
 {{#section 'bodyleft'}}
 <!-- aside Widget -->
 	<div class="aside">
-		<h3 class="aside-title">Brand</h3>
-		<div class="checkbox-filter">
-			{{#each layoutVM.categories}}
-				<div class="input-checkbox">
-					<input type="checkbox"   id="checkk">
-					<label for="brand-1">
-						<span></span>
-						<a href="/category/{{CatID}}" >{{CatName}}</a>
-						<small>(10)</small>
-					</label>
-					
-					
-				</div>
-				<script >
-					var i;
-					for (i = 1; i <= 4; i++) {
-					    if(i=={{CatID}})
-					    	{
-					    		document.getElementById("checkk").style.checked=true;
-					    	}
-					    
-					}
-				</script>
-			{{/each}}
-		</div>
+		<div  style="margin-top:30px">
+		<h4>Hãng sản xuất</h4>
+		<ul class="list-group list-group-flush">
+		{{#each layoutVM2.producers}}
+			<a href="/producer/{{ProduID}}"><li class="list-group-item " style="border: none">{{ProduName}}</li></a>
+		{{/each}}
+		</ul>
+		<h4>Loại laptop</h4>
+		<ul class="list-group list-group-flush">
+		{{#each layoutVM.categories}}
+				<a href="/category/{{CatID}}"><li class="list-group-item" style="border: none">{{CatName}}</li></a>
+		{{/each}}
+		</ul>
+	</div>
 	</div>
 <!-- /aside Widget -->
 {{/section}}
