--- a/Back-end/views/search/result.hbs
+++ b/Back-end/views/search/result.hbs
@@ -32,31 +32,21 @@
 {{/section}} 
 {{#section 'bodyleft'}}
 <!-- aside Widget -->
-<div class="aside">
-	<h3 class="aside-title">Tìm kiếm nhanh</h3>
-	<div class="checkbox-filter">
+<div class="aside" style="padding-left:0px">
+	<!--<h3 class="aside-title">Tìm kiếm nâng cao</h3> -->
+	<div  style="margin-top:30px">
+		<h4>Hãng sản xuất</h4>
+		<ul class="list-group list-group-flush">
 		{{#each layoutVM2.producers}}
-		<div class="input-checkbox">
-			<input type="checkbox" checked="" id="brand-1">
-			<label for="brand-1">
-				<span></span>
-				<a href="/producer/{{ProduID}}">{{ProduName}}</a>
-				<small>(10)</small>
-			</label>
-		</div>
+			<a href="/producer/{{ProduID}}"><li class="list-group-item " style="border: none">{{ProduName}}</li></a>
 		{{/each}}
+		</ul>
+		<h4>Loại laptop</h4>
+		<ul class="list-group list-group-flush">
 		{{#each layoutVM.categories}}
-				<div class="input-checkbox">
-					<input type="checkbox"   id="checkk" checked="">
-					<label for="checkk">
-						<span></span>
-						<a href="/category/{{CatID}}" >{{CatName}}</a>
-						<small>(10)</small>
-					</label>
-					
-					
-				</div>
-			{{/each}}
+				<a href="/category/{{CatID}}"><li class="list-group-item" style="border: none">{{CatName}}</li></a>
+		{{/each}}
+		</ul>
 	</div>
 </div>
 <!-- /aside Widget -->
