--- a/Back-end/views/account/pay.hbs
+++ b/Back-end/views/account/pay.hbs
@@ -86,7 +86,7 @@
         {{/each}}
         <div class="order-col">
           <div><strong>TỔNG CỘNG</strong></div>
-          <div><strong class="order-total">55.890.000₫</strong></div>
+          <div><strong class="order-total">{{layoutVM.inTotal}}đ</strong></div>
         </div>
 
       </div>
